[gd_scene load_steps=10 format=3 uid="uid://ba2oi3s02xwuy"]

[ext_resource type="Script" uid="uid://djaskmwt6tb02" path="res://Scripts/slime.gd" id="1_u7ik6"]
[ext_resource type="Texture2D" uid="uid://cei5oxs6w0pve" path="res://Assests/sprites/slime_purple.png" id="2_u7ik6"]
[ext_resource type="PackedScene" uid="uid://oi18ychm1y43" path="res://Scenes/damage_zone.tscn" id="3_3iyo8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_smk1p"]
atlas = ExtResource("2_u7ik6")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iyo8"]
atlas = ExtResource("2_u7ik6")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbeid"]
atlas = ExtResource("2_u7ik6")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtlio"]
atlas = ExtResource("2_u7ik6")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_qmdr4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smk1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iyo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbeid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtlio")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yyg5"]
size = Vector2(12, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_u7ik6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_qmdr4")
autoplay = "default"
frame_progress = 0.434329

[node name="DamageZone" parent="." instance=ExtResource("3_3iyo8")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_7yyg5")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(12, 0)
collision_mask = 13

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -6)
target_position = Vector2(-12, 0)
collision_mask = 13

[node name="RayCastRightGround" type="RayCast2D" parent="."]
position = Vector2(10, -6)
target_position = Vector2(0, 6)
collision_mask = 13

[node name="RayCastLeftGround" type="RayCast2D" parent="."]
position = Vector2(-10, -6)
target_position = Vector2(0, 6)
collision_mask = 13
